fix: wrap dividing operation with `calc()` in scss files (#108)

--- a/_sass/misc/article-menu.scss
+++ b/_sass/misc/article-menu.scss
@@ -16,7 +16,7 @@
   .post-menu-content {
     ul {
       border-left: 1px solid #e9ecef;
-      $indent: $base-font-size / 4;
+      $indent: calc($base-font-size / 4);
       $active-bgcolor: #ecebec;
 
       @for $i from 2 to 7 {
